continuing to push forward to the beta!

--- a/Test App/web/index.html
+++ b/Test App/web/index.html
@@ -12,9 +12,17 @@
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
 
+    <meta property=’og:title’ content='Aureus'/>
+    <meta property=’og:image’ content='Sharing-Cover.png/'>
+    <meta property=’og:url’ content='withaureus.org'/>
+    <meta property='og:image:width' content='1200'/>
+    <meta property='og:image:height' content='627'/>
+    <!-- TYPE BELOW IS PROBABLY: 'website' or 'article' or look on https://ogp.me/#types -->
+    <meta property="og:type" content='website'/>
+
     <meta charset="UTF-8">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-    <meta name="description" content="A new Flutter project.">
+    <meta name="description" content="$.">
   
     <!-- iOS meta tags & icons -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -23,7 +31,7 @@
     <link rel="apple-touch-icon" href="icons/Icon-192.png">
   
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/png" href="favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="favicon.png"/>
   
     <title>Aureus</title>
     <link rel="manifest" href="manifest.json">
